env/module-securitygroup.json
{
    "AWSTemplateFormatVersion":"2010-09-09",
    "Description":"Setup security groups",
    "Parameters":{
        "Prefix":{
            "Description":"prefix of resources",
            "Type":"String",
            "MinLength":"1",
            "MaxLength":"24",
            "ConstraintDescription":"Length is too long"
        },
        "CIDRPrefix":{
            "Description":"network cidr prefix",
            "Type":"String",
            "MinLength":"1",
            "MaxLength":"8",
            "ConstraintDescription":"Length is too long"
        },
        "AdminCidr":{
            "Description":"Admin CIDR",
            "Type":"String"
        },
        "VPC":{
            "Description":"VPC id",
            "Type":"String"
        },
        "EnvironmentType":{
            "Description":"EnvironmentType: prod, stag, test, load.",
            "Type":"String",
            "AllowedValues":[
                "prod",
                "stag",
                "test",
                "load"
            ]
        }
    },
    "Conditions":{
        "IsModeProd":{
            "Fn::Equals":[
                {
                    "Ref":"EnvironmentType"
                },
                "prod"
            ]
        },
        "IsModeStag":{
            "Fn::Equals":[
                {
                    "Ref":"EnvironmentType"
                },
                "stag"
            ]
        },
        "IsModeTest":{
            "Fn::Equals":[
                {
                    "Ref":"EnvironmentType"
                },
                "test"
            ]
        },
        "IsModeLoad":{
            "Fn::Equals":[
                {
                    "Ref":"EnvironmentType"
                },
                "load"
            ]
        }
    },
    "Resources":{
        "SecurityGroupBastion":{
            "Type":"AWS::EC2::SecurityGroup",
            "Properties":{
                "GroupDescription":{
                    "Fn::Join":[
                        ".",
                        [
                            {
                                "Ref":"Prefix"
                            },
                            "vpc",
                            "sg",
                            "bastion"
                        ]
                    ]
                },
                "SecurityGroupIngress":[
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"22",
                        "ToPort":"22",
                        "CidrIp":{
                            "Ref":"AdminCidr"
                        }
                    },
                    {
                        "IpProtocol":"icmp",
                        "FromPort":"8",
                        "ToPort":"-1",
                        "CidrIp":{
                            "Ref":"AdminCidr"
                        }
                    },
                    {
                        "IpProtocol":"icmp",
                        "FromPort":"8",
                        "ToPort":"-1",
                        "CidrIp":{
                            "Fn::Join":[
                                ".",
                                [
                                    {
                                        "Ref":"CIDRPrefix"
                                    },
                                    "0.0/16"
                                ]
                            ]
                        }
                    }
                ],
                "SecurityGroupEgress":[
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"8080",
                        "ToPort":"8080",
                        "CidrIp":{
                            "Fn::Join":[
                                ".",
                                [
                                    {
                                        "Ref":"CIDRPrefix"
                                    },
                                    "0.0/16"
                                ]
                            ]
                        }
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"22",
                        "ToPort":"22",
                        "CidrIp":{
                            "Fn::Join":[
                                ".",
                                [
                                    {
                                        "Ref":"CIDRPrefix"
                                    },
                                    "0.0/16"
                                ]
                            ]
                        }
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"80",
                        "ToPort":"80",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"443",
                        "ToPort":"443",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"udp",
                        "FromPort":"123",
                        "ToPort":"123",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"icmp",
                        "FromPort":"8",
                        "ToPort":"-1",
                        "CidrIp":"0.0.0.0/0"
                    }
                ],
                "VpcId":{
                    "Ref":"VPC"
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Join":[
                                ".",
                                [
                                    {
                                        "Ref":"Prefix"
                                    },
                                    "vpc",
                                    "sg",
                                    "bastion"
                                ]
                            ]
                        }
                    },
                    {
                        "Key":"EnvName",
                        "Value":{
                            "Ref":"Prefix"
                        }
                    }
                ]
            }
        },
        "SecurityGroupNat":{
            "Type":"AWS::EC2::SecurityGroup",
            "Properties":{
                "GroupDescription":{
                    "Fn::Join":[
                        ".",
                        [
                            {
                                "Ref":"Prefix"
                            },
                            "vpc",
                            "sg",
                            "nat"
                        ]
                    ]
                },
                "SecurityGroupIngress":[
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"80",
                        "ToPort":"80",
                        "CidrIp":{
                            "Fn::Join":[
                                ".",
                                [
                                    {
                                        "Ref":"CIDRPrefix"
                                    },
                                    "0.0/16"
                                ]
                            ]
                        }
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"443",
                        "ToPort":"443",
                        "CidrIp":{
                            "Fn::Join":[
                                ".",
                                [
                                    {
                                        "Ref":"CIDRPrefix"
                                    },
                                    "0.0/16"
                                ]
                            ]
                        }
                    },
                    {
                        "IpProtocol":"icmp",
                        "FromPort":"8",
                        "ToPort":"-1",
                        "CidrIp":{
                            "Fn::Join":[
                                ".",
                                [
                                    {
                                        "Ref":"CIDRPrefix"
                                    },
                                    "0.0/16"
                                ]
                            ]
                        }
                    },
                    {
                        "IpProtocol":"udp",
                        "FromPort":"123",
                        "ToPort":"123",
                        "CidrIp":{
                            "Fn::Join":[
                                ".",
                                [
                                    {
                                        "Ref":"CIDRPrefix"
                                    },
                                    "0.0/16"
                                ]
                            ]
                        }
                    }
                ],
                "SecurityGroupEgress":[
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"21",
                        "ToPort":"21",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"22",
                        "ToPort":"22",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"80",
                        "ToPort":"80",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"443",
                        "ToPort":"443",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"icmp",
                        "FromPort":"8",
                        "ToPort":"-1",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"465",
                        "ToPort":"465",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"8443",
                        "ToPort":"8443",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"25",
                        "ToPort":"25",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"udp",
                        "FromPort":"123",
                        "ToPort":"123",
                        "CidrIp":"0.0.0.0/0"
                    }
                ],
                "VpcId":{
                    "Ref":"VPC"
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Join":[
                                ".",
                                [
                                    {
                                        "Ref":"Prefix"
                                    },
                                    "vpc",
                                    "sg",
                                    "nat"
                                ]
                            ]
                        }
                    },
                    {
                        "Key":"EnvName",
                        "Value":{
                            "Ref":"Prefix"
                        }
                    }
                ]
            }
        },
        "SecurityGroupAMPSELB":{
            "Type":"AWS::EC2::SecurityGroup",
            "Properties":{
                "GroupDescription":{
                    "Fn::Join":[
                        ".",
                        [
                            {
                                "Ref":"Prefix"
                            },
                            "vpc",
                            "sg",
                            "lb",
                            "amps"
                        ]
                    ]
                },
                "SecurityGroupIngress":[
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"25",
                        "ToPort":"25",
                        "CidrIp":"0.0.0.0/0"
                    }
                ],
                "VpcId":{
                    "Ref":"VPC"
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Join":[
                                ".",
                                [
                                    {
                                        "Ref":"Prefix"
                                    },
                                    "vpc",
                                    "sg",
                                    "lb",
                                    "amps"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "SecurityGroupAMPS":{
            "Type":"AWS::EC2::SecurityGroup",
            "Properties":{
                "GroupDescription":{
                    "Fn::Join":[
                        ".",
                        [
                            {
                                "Ref":"Prefix"
                            },
                            "vpc",
                            "sg",
                            "amps"
                        ]
                    ]
                },
                "SecurityGroupIngress":[
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"25",
                        "ToPort":"25",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"22",
                        "ToPort":"22",
                        "CidrIp":"0.0.0.0/0"
                    }
                ],
                "SecurityGroupEgress":[
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"53",
                        "ToPort":"53",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"udp",
                        "FromPort":"53",
                        "ToPort":"53",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"80",
                        "ToPort":"80",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"443",
                        "ToPort":"443",
                        "CidrIp":"0.0.0.0/0"
                    }
                ],
                "VpcId":{
                    "Ref":"VPC"
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Join":[
                                ".",
                                [
                                    {
                                        "Ref":"Prefix"
                                    },
                                    "vpc",
                                    "sg",
                                    "amps"
                                ]
                            ]
                        }
                    },
                    {
                        "Key":"EnvName",
                        "Value":{
                            "Ref":"Prefix"
                        }
                    }
                ]
            }
        },
        "SecurityGroupARQ":{
            "Type":"AWS::EC2::SecurityGroup",
            "Properties":{
                "GroupDescription":{
                    "Fn::Join":[
                        ".",
                        [
                            {
                                "Ref":"Prefix"
                            },
                            "vpc",
                            "sg",
                            "arq"
                        ]
                    ]
                },
                "SecurityGroupIngress":[
                    {
                        "IpProtocol":"udp",
                        "FromPort":"53",
                        "ToPort":"53",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"22",
                        "ToPort":"22",
                        "CidrIp":"0.0.0.0/0"
                    }
                ],
                "SecurityGroupEgress":[
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"80",
                        "ToPort":"80",
                        "CidrIp":"0.0.0.0/0"
                    },
                    {
                        "IpProtocol":"tcp",
                        "FromPort":"443",
                        "ToPort":"443",
                        "CidrIp":"0.0.0.0/0"
                    }
                ],
                "VpcId":{
                    "Ref":"VPC"
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Join":[
                                ".",
                                [
                                    {
                                        "Ref":"Prefix"
                                    },
                                    "vpc",
                                    "sg",
                                    "arq"
                                ]
                            ]
                        }
                    },
                    {
                        "Key":"EnvName",
                        "Value":{
                            "Ref":"Prefix"
                        }
                    }
                ]
            }
        },
        "SecurityGroupDB":{
            "Type":"AWS::EC2::SecurityGroup",
            "Properties":{
                "GroupDescription":{
                    "Fn::Join":[
                        ".",
                        [
                            {
                                "Ref":"Prefix"
                            },
                            "vpc",
                            "sg",
                            "db"
                        ]
                    ]
                },
                "SecurityGroupEgress":{
                    "IpProtocol":"tcp",
                    "FromPort":"123",
                    "ToPort":"123",
                    "CidrIp":"0.0.0.0/0"
                },
                "VpcId":{
                    "Ref":"VPC"
                },
                "Tags":[
                    {
                        "Key":"Name",
                        "Value":{
                            "Fn::Join":[
                                ".",
                                [
                                    {
                                        "Ref":"Prefix"
                                    },
                                    "vpc",
                                    "sg",
                                    "db"
                                ]
                            ]
                        }
                    },
                    {
                        "Key":"EnvName",
                        "Value":{
                            "Ref":"Prefix"
                        }
                    }
                ]
            }
        },
        "SecurityGroupDBIngressWebDB":{
            "Type":"AWS::EC2::SecurityGroupIngress",
            "DependsOn":[
                "SecurityGroupDB",
                "SecurityGroupAMPS"
            ],
            "Properties":{
                "GroupId":{
                    "Fn::GetAtt":[
                        "SecurityGroupDB",
                        "GroupId"
                    ]
                },
                "IpProtocol":"tcp",
                "ToPort":"3306",
                "FromPort":"3306",
                "SourceSecurityGroupId":{
                    "Fn::GetAtt":[
                        "SecurityGroupAMPS",
                        "GroupId"
                    ]
                }
            }
        },
        "SecurityGroupDBEgressDBTCP":{
            "Type":"AWS::EC2::SecurityGroupEgress",
            "DependsOn":"SecurityGroupDB",
            "Properties":{
                "GroupId":{
                    "Fn::GetAtt":[
                        "SecurityGroupDB",
                        "GroupId"
                    ]
                },
                "IpProtocol":"tcp",
                "ToPort":"65535",
                "FromPort":"0",
                "DestinationSecurityGroupId":{
                    "Fn::GetAtt":[
                        "SecurityGroupDB",
                        "GroupId"
                    ]
                }
            }
        }
    },
    "Outputs":{
        "SecurityGroupNat":{
            "Value":{
                "Fn::GetAtt":[
                    "SecurityGroupNat",
                    "GroupId"
                ]
            }
        },
        "SecurityGroupBastion":{
            "Value":{
                "Fn::GetAtt":[
                    "SecurityGroupBastion",
                    "GroupId"
                ]
            }
        },
        "SecurityGroupAMPSELBGroupId":{
            "Value":{
                "Fn::GetAtt":[
                    "SecurityGroupAMPSELB",
                    "GroupId"
                ]
            }
        },
        "SecurityGroupAMPSGroupId":{
            "Value":{
                "Fn::GetAtt":[
                    "SecurityGroupAMPS",
                    "GroupId"
                ]
            }
        },
        "SecurityGroupARQGroupId":{
            "Value":{
                "Fn::GetAtt":[
                    "SecurityGroupARQ",
                    "GroupId"
                ]
            }
        },
        "SecurityGroupDBGroupId":{
            "Value":{
                "Fn::GetAtt":[
                    "SecurityGroupDB",
                    "GroupId"
                ]
            }
        }
    }
}
